Move script tag to footer tag

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <title>fast website less than 5 minutes</title>
     </head>
     <body>
-        hehe
-        <script src="app.js"></script>
     </body>
+    <footer>
+        <script src="app.js"></script>
+    </footer>
 </html>
