Convert response from json to object and insert them into div

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>fast website less than 5 minutes</title>
     </head>
     <body>
+        <div id="content"></div>
     </body>
     <footer>
         <script src="app.js"></script>
