Change page title

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>fast website less than 5 minutes</title>
+        <title>RSS Reader</title>
     </head>
     <body>
         <div id="content"></div>
