--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>RSS Reader</title>
+        <link rel="stylesheet" type="text/css" href="app.css">
     </head>
     <body>
         <div id="content"></div>
