Get title from api response

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>RSS Reader</title>
+        <title></title>
         <link rel="stylesheet" type="text/css" href="app.css">
     </head>
     <body>
