--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<?xml-stylesheet type="text/css" href="rss.css" ?>
-<rss version="2.0" xmlns:atom="https://medium.com/feed/wwwid"></rss>
+<!doctype html>
+<html>
+    <head>
+        <title></title>
+        <link rel="stylesheet" type="text/css" href="app.css">
+    </head>
+    <body>
+        <h2></h2>
+        <div id="content"></div>
+    </body>
+    <footer>
+        <script src="app.js"></script>
+    </footer>
+</html>
