--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
         <link rel="stylesheet" type="text/css" href="app.css">
     </head>
     <body>
+        <ul>
+            <li><a class="active" href="#home">Home</a></li>
+            <li><a href="#news">News</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <li><a href="#about">About</a></li>
+        </ul>
         <h2></h2>
         <div id="content"></div>
     </body>
