move Home, Filter, and About to right

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     </head>
     <body>
         <ul>
-            <li><a class="active" href="">Home</a></li>
-            <li><a href="">Filter</a></li>
-            <li><a href="">Contact</a></li>
-            <li><a href="">About</a></li>
+            <li><a class="active" href=""></a></li>
+            <li style="float:right"><a href="">Home</a></li>
+            <li style="float:right"><a href="">Filter</a></li>
+            <li style="float:right"><a href="">About</a></li>
         </ul>
         <h2></h2>
         <div id="content"></div>
