add logotitle in navbar

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <ul>
-            <li><a class="active" href=""></a></li>
+            <li id="logotitle"><a class="active" href=""></a></li>
             <li style="float:right"><a href="">Home</a></li>
             <li style="float:right"><a href="">Filter</a></li>
             <li style="float:right"><a href="">About</a></li>
