--- a/index.html
+++ b/index.html
@@ -23,18 +23,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>WWWID Medium</title>
   <link rel="stylesheet" type="text/css" href="styles/inline.css">
-
   <!-- TODO add manifest here -->
-  
 </head>
 <body>
-
   <header class="header">
     <h1 class="header__title">WWWID Medium</h1>
     <button id="butRefresh" class="headerButton" aria-label="Refresh"></button>
     <button id="butAdd" class="headerButton" aria-label="Add"></button>
   </header>
-
   <main class="main">
     <div class="card cardTemplate weather-forecast" hidden>
     </div>
@@ -45,13 +41,8 @@
       <div class="dialog-title">Add new city</div>
       <div class="dialog-body">
         <select id="selectCityToAdd">
-          <option value="2357536">Austin, TX</option>
-          <option value="2367105">Boston, MA</option>
-          <option value="2379574">Chicago, IL</option>
-          <option value="2459115">New York, NY</option>
-          <option value="2475687">Portland, OR</option>
-          <option value="2487956">San Francisco, CA</option>
-          <option value="2490383">Seattle, WA</option>
+          <!--option value="2357536">Austin, TX</option>
+          <option value="2367105">Boston, MA</option-->
         </select>
       </div>
       <div class="dialog-buttons">
